--- a/_config.yml
+++ b/_config.yml
@@ -108,5 +108,11 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/miwyf/miwyf.github.io.git
+  repo: https://github.com/miwyf/miwyf.github.io
   branch: gh-pages
+
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
