--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: 1. git checkout...
-        uses: actions/checkout@v3
+        uses: actions/checkout@master
 
       - name: 2. setup nodejs...
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@master
       
       - name: 3. install hexo...
         run: |
@@ -47,10 +47,9 @@ jobs:
         
       # 提交到我们的存放静态资源的仓库
       - name: Build and Deploy
-
         uses: y4code/hexo-deploy-action@master
         env:
           PERSONAL_TOKEN: ${{ secrets.GH_TOKEN }}
           PUBLISH_REPOSITORY: miwyf/miwyf.github.io # The repository the action should deploy to.
-          BRANCH: master  # The branch the action should deploy to.
+          BRANCH: gh-pages  # The branch the action should deploy to.
           PUBLISH_DIR: ./public # The folder the action should deploy.
