--- a/source/_posts/esp-hlw8032-meter/hlw8032.yaml
+++ b/source/_posts/esp-hlw8032-meter/hlw8032.yaml
@@ -75,15 +75,15 @@ sensor:
   - platform: cse7766
     #update_interval: 15s
     current:
-      name: "Sonoff Pow R2 Current"
+      name: "${friendly_name} Current"
       filters:
         - lambda: return x / 1.88;
     voltage:
-      name: "Sonoff Pow R2 Voltage"
+      name: "${friendly_name} Voltage"
       filters:
         - lambda: return x * 1.88;
     power:
-      name: "Sonoff Pow R2 Power"
+      name: "${friendly_name} Power"
       filters:
 #        - sliding_window_moving_average:
 #            window_size: 10
@@ -91,7 +91,7 @@ sensor:
 #            send_first_at: 1
         - lambda: return x * 1.88;
     energy:
-      name: "Sonoff Pow R2 Energy"
+      name: "${friendly_name} Energy"
       filters:
         - lambda: return x / 1.88 /1000;
         #- multiply: 0.001
