--- a/source/_posts/esp-im1266-meter/im1266-mini.yaml
+++ b/source/_posts/esp-im1266-meter/im1266-mini.yaml
@@ -31,7 +31,7 @@ esphome:
 
 # Enable logging
 logger:
-  level: DEBUG
+  #level: DEBUG
 
 # Enable Home Assistant API
 api:
@@ -88,7 +88,7 @@ sensor:
     update_interval: 60s
   - platform: modbus_controller
     modbus_controller_id: epever
-    name: "${device_name} Voltage"
+    name: "${friendly_name} Voltage"
     id: im1266_voltage
     register_type: holding
     address: 0x0048
@@ -99,7 +99,7 @@ sensor:
       - multiply: 0.0001
   - platform: modbus_controller
     modbus_controller_id: epever
-    name: "${device_name} Current"
+    name: "${friendly_name} Current"
     id: im1266_current
     register_type: holding
     address: 0x004A
@@ -110,7 +110,7 @@ sensor:
       - multiply: 0.0001
   - platform: modbus_controller
     modbus_controller_id: epever
-    name: "${device_name} Power"
+    name: "${friendly_name} Power"
     id: im1266_power
     register_type: holding
     address: 0x004C
@@ -121,7 +121,7 @@ sensor:
       - multiply: 0.0001
   - platform: modbus_controller
     modbus_controller_id: epever
-    name: "${device_name} Energy"
+    name: "${friendly_name} Energy"
     id: im1266_energy
     register_type: holding
     address: 0x004E
@@ -132,7 +132,7 @@ sensor:
       - multiply: 0.0001
   - platform: modbus_controller
     modbus_controller_id: epever
-    name: "${device_name} PF"
+    name: "${friendly_name} PF"
     id: im1266_pf
     register_type: holding
     address: 0x0050
@@ -143,7 +143,7 @@ sensor:
       - multiply: 0.001
   - platform: modbus_controller
     modbus_controller_id: epever
-    name: "${device_name} CO2"
+    name: "${friendly_name} CO2"
     id: im1266_co2
     register_type: holding
     address: 0x0052
@@ -154,7 +154,7 @@ sensor:
       - multiply: 0.0001
   - platform: modbus_controller
     modbus_controller_id: epever
-    name: "${device_name} Temprature"
+    name: "${friendly_name} Temprature"
     id: im1266_temprature
     register_type: holding
     address: 0x0054
@@ -165,7 +165,7 @@ sensor:
       - multiply: 0.01
   - platform: modbus_controller
     modbus_controller_id: epever
-    name: "${device_name} Frequency"
+    name: "${friendly_name} Frequency"
     id: im1266_frequency
     register_type: holding
     address: 0x0056
