--- a/source/_posts/esp-im1266-meter/im1266.yaml
+++ b/source/_posts/esp-im1266-meter/im1266.yaml
@@ -17,7 +17,7 @@
 
 substitutions:
   #Name your Gateway
-  device_name: im1266-mini
+  device_name: im1266
   #Home Assistant Name
   friendly_name: ESP IM1266
   #Secret YAML is used for next data:
@@ -30,7 +30,7 @@ esphome:
   board: esp01_1m
 
 # Enable logging
-logger:
+#logger:
   #level: DEBUG
 
 # Enable Home Assistant API
@@ -62,7 +62,9 @@ wifi:
 
 captive_portal:
 
-
+status_led:
+  pin: GPIO16
+    
 #UART Settings
 uart:
   id: mod_bus
@@ -102,7 +104,7 @@ sensor:
     name: "${friendly_name} Current"
     id: im1266_current
     register_type: holding
-    address: 0x004A
+    address: 0x0049
     unit_of_measurement: "A"
     value_type: U_DWORD
     accuracy_decimals: 4
@@ -113,7 +115,7 @@ sensor:
     name: "${friendly_name} Power"
     id: im1266_power
     register_type: holding
-    address: 0x004C
+    address: 0x004A
     unit_of_measurement: "W"
     value_type: U_DWORD
     accuracy_decimals: 4
@@ -124,7 +126,7 @@ sensor:
     name: "${friendly_name} Energy"
     id: im1266_energy
     register_type: holding
-    address: 0x004E
+    address: 0x004B
     unit_of_measurement: "kWh"
     value_type: U_DWORD
     accuracy_decimals: 4
@@ -135,7 +137,7 @@ sensor:
     name: "${friendly_name} PF"
     id: im1266_pf
     register_type: holding
-    address: 0x0050
+    address: 0x004C
     unit_of_measurement: ""
     value_type: U_DWORD
     accuracy_decimals: 3
@@ -146,7 +148,7 @@ sensor:
     name: "${friendly_name} CO2"
     id: im1266_co2
     register_type: holding
-    address: 0x0052
+    address: 0x004D
     unit_of_measurement: "Kg"
     value_type: U_DWORD
     accuracy_decimals: 4
@@ -157,7 +159,7 @@ sensor:
     name: "${friendly_name} Temprature"
     id: im1266_temprature
     register_type: holding
-    address: 0x0054
+    address: 0x004E
     unit_of_measurement: "°C"
     value_type: U_DWORD
     accuracy_decimals: 2
@@ -168,13 +170,38 @@ sensor:
     name: "${friendly_name} Frequency"
     id: im1266_frequency
     register_type: holding
-    address: 0x0056
+    address: 0x004F
     unit_of_measurement: "Hz"
     value_type: U_DWORD
     accuracy_decimals: 2
     filters:
       - multiply: 0.01
 
+switch:
+#  - platform: uart
+#    name: "UART String Output"
+#    data: 'DataToSend'
+
+  - platform: uart
+    name: "${friendly_name} clear10"
+    data: [0x01,0x10,0x00,0x4B,0x00,0x02,0x04,0x00,0x00,0x00,0x00,0xB6,0x2C]
+  #- platform: modbus_controller
+    #modbus_controller_id: epever
+    #name: "${friendly_name} Clear"
+    #register_type: holding
+    #address: 0x004B
+    #bitmask: 0
+    #true: 0x10, false:0x06
+    #use_write_multiple: true
+    #custom_command: [0x01,0x10,0x00,0x4B,0x00,0x02,0x04,0x00,0x00,0x00,0x00]
+
+#  - platform: uart
+#    name: "UART Recurring Output"
+#    data: [0xDE, 0xAD, 0xBE, 0xEF]
+#    send_every: 1s
+  - platform: restart
+    name: "${friendly_name} Restart"
+    
 # Extra sensor to keep track of gateway uptime
 text_sensor:
   - platform: template
@@ -201,6 +228,3 @@ text_sensor:
       return {buffer};
     icon: mdi:clock-start
     update_interval: 60s
-
-
-
